--- a/topics/_select-statement.qmd
+++ b/topics/_select-statement.qmd
@@ -834,6 +834,11 @@ result
 * `AS` - Renaming columns
 * Literals
 * Computations in SELECT
+
+<p>&nbsp;</p>
+
+See the [MySQL *SELECT* documentation](https://dev.mysql.com/doc/refman/8.0/en/select.html).
+
 :::
 ::: {.column}
 * `WHERE`
@@ -845,6 +850,11 @@ result
 * `NULL` values
 * `IFNULL` operator
 * String matches `%%`
+
+<p>&nbsp;</p>
+
+See the [MySQL *Functions* documentation](https://dev.mysql.com/doc/refman/8.0/en/functions.html)
+
 :::
 ::::
 
