--- a/fa2024/lectures/index.qmd
+++ b/fa2024/lectures/index.qmd
@@ -83,6 +83,7 @@ print("<div class='item'>[F24 Canvas](https://virginiacommonwealth.instructure.c
 print("<div class='item'>[F24 Zoom URL](https://vcu.zoom.us/j/84401855863){target='_blank'}</div>")
 print("<div class='item'>[F24 GH Classroom](https://classroom.github.com/classrooms/24642120-cmsc-408-fall-2024-databases){target='_blank'}</div>")
 print("<div class='item'>[F24 Gradescope](https://www.gradescope.com/courses/813113){target='_blank'}</div>")
+print("<div class='item'>[Kaltura](https://vcu.mediaspace.kaltura.com/my-media){target='_blank'}</div>")
 
 
 
@@ -97,6 +98,8 @@ print("<div class='item'>[F24 G-drive ](https://drive.google.com/drive/folders/1
 print("<div class='item'>[Guide](../guide/index.html){target='_blank'}</div>")
 print("<div class='item'>[Topics](../topics/index.html){target='_blank'}</div>")
 print("</div>")
+
+
 
 ```
 
